2012-09-05  Jiri Slaby <jslaby@suse.cz>

	* configure.ac: Add SuSe path.

2012-09-05  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Fix typo.

2012-09-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/import_gcry.py: Sort cipher_files, to make build system
	generation more deterministic.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ieee1275/ofdisk.c (scan): Check function return value.
	* grub-core/lib/ieee1275/datetime.c (grub_get_datetime): Likewise.
	(grub_set_datetime): Likewise.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/yylex.l: Ignore unused-function and sign-compare
	warnings.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/dvh.c (grub_dvh_is_valid): Add missing byteswap.

2012-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_read_block): Make keys a const pointer.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.am (EXTRA_DIST): Add linguas.sh.  It's only strictly
	required for checkouts from bzr, but it may be useful for users or
	distributors wishing to update translations against a tarball
	distribution, and it can be helpful for the tarball to be a superset
	of what's in bzr.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.am (EXTRA_DIST): Add
	grub-core/tests/boot/linux.init-mips.S,
	grub-core/tests/boot/linux.init-ppc.S, and
	grub-core/tests/boot/linux-ppc.cfg.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/mmap/mips/loongson: Remove empty directory.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* docs/man/grub-mkdevicemap.h2m: Remove, since grub-mkdevicemap is
	gone.

2012-09-04  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Add grub-bios-setup, grub-ofpathname, and
	grub-sparc64-setup.

2012-08-05  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Strengthen the test for working -nostdinc -isystem.

2012-07-31  Grégoire Sutre  <gregoire.sutre@gmail.com>
